[gd_scene load_steps=26 format=3 uid="uid://cm2vr1jr62xdt"]

[ext_resource type="Script" path="res://Scripts/OudHero/oud_hero.gd" id="1_1hwvg"]
[ext_resource type="Texture2D" uid="uid://pe42axf5ayit" path="res://Assets/Sprites/OudHero/oud_upscaled.jpg" id="1_wnroj"]
[ext_resource type="PackedScene" uid="uid://c54rr45jjyqwd" path="res://Scenes/OudHero/oud_button.tscn" id="2_r8tf0"]
[ext_resource type="AudioStream" uid="uid://bf41nw0a13gcx" path="res://Assets/Sounds/OudHero/D.wav" id="4_m7bev"]
[ext_resource type="AudioStream" uid="uid://bouyu2exbmrp" path="res://Assets/Sounds/OudHero/D#.wav" id="5_csuwm"]
[ext_resource type="AudioStream" uid="uid://c0bv7y4iwbvrm" path="res://Assets/Sounds/OudHero/E.wav" id="6_lbdai"]
[ext_resource type="AudioStream" uid="uid://bi3j07y8xsyfn" path="res://Assets/Sounds/OudHero/E#.wav" id="7_5s1hq"]
[ext_resource type="AudioStream" uid="uid://dpv0yvn0exc8p" path="res://Assets/Sounds/OudHero/F.wav" id="8_ldod0"]
[ext_resource type="AudioStream" uid="uid://cxmmg5iw18k3x" path="res://Assets/Sounds/OudHero/F#.wav" id="9_cagy1"]
[ext_resource type="AudioStream" uid="uid://7ds0tm8e1bie" path="res://Assets/Sounds/OudHero/G.wav" id="10_nkod4"]
[ext_resource type="AudioStream" uid="uid://b7swlp5pshfrc" path="res://Assets/Sounds/OudHero/G#.wav" id="11_8qc1u"]
[ext_resource type="AudioStream" uid="uid://dykk7bpswadan" path="res://Assets/Sounds/OudHero/A.wav" id="12_u4l25"]
[ext_resource type="AudioStream" uid="uid://un6lxb8cw40v" path="res://Assets/Sounds/OudHero/A#.wav" id="13_cj3pb"]
[ext_resource type="AudioStream" uid="uid://dby1v78sowugc" path="res://Assets/Sounds/OudHero/C2.wav" id="14_27dc4"]
[ext_resource type="AudioStream" uid="uid://cy8fxf06gt2sw" path="res://Assets/Sounds/OudHero/B.wav" id="14_sc8pf"]
[ext_resource type="AudioStream" uid="uid://ngxcsjq7qsbd" path="res://Assets/Sounds/OudHero/C2#.wav" id="15_4bt7w"]
[ext_resource type="AudioStream" uid="uid://beysh5h0pnuum" path="res://Assets/Sounds/OudHero/B#.wav" id="15_edbbm"]
[ext_resource type="Texture2D" uid="uid://dwfhvlho0fpgc" path="res://Assets/Sprites/OudHero/scroll.png" id="18_w3b70"]
[ext_resource type="FontFile" uid="uid://bgcobn5pptvx6" path="res://Assets/Fonts/Abaddon_Fonts/Abaddon-Bold.ttf" id="19_tussx"]
[ext_resource type="Script" path="res://Scripts/OudHero/Score.gd" id="20_1ff0j"]
[ext_resource type="AudioStream" uid="uid://cqu017pe60tsc" path="res://Assets/Sounds/short-success-sound-glockenspiel-treasure-video-game-6346.mp3" id="21_65g2k"]
[ext_resource type="FontFile" uid="uid://c8g1j0nom1cq1" path="res://Assets/Fonts/nightmare_hero/Nightmare_Hero_Normal.ttf" id="22_g3278"]

[sub_resource type="Animation" id="Animation_kgy06"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_57gh1"]
resource_name = "progress"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_re2dq"]
_data = {
"RESET": SubResource("Animation_kgy06"),
"progress": SubResource("Animation_57gh1")
}

[node name="OudHero" type="Node2D"]
position = Vector2(374, 240)
script = ExtResource("1_1hwvg")

[node name="OudImage" type="Sprite2D" parent="."]
position = Vector2(183, 73)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_wnroj")

[node name="OudButtons" type="Node" parent="."]

[node name="OudButton" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 650.0
offset_top = 435.0
offset_right = 680.0
offset_bottom = 465.0

[node name="OudButton2" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 750.0
offset_top = 435.0
offset_right = 780.0
offset_bottom = 465.0
track_stream = ExtResource("4_m7bev")
track_stream_alt = ExtResource("5_csuwm")
keycode = 87
label_note = "D"

[node name="OudButton3" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 850.0
offset_top = 435.0
offset_right = 880.0
offset_bottom = 465.0
track_stream = ExtResource("6_lbdai")
track_stream_alt = ExtResource("7_5s1hq")
keycode = 69
label_note = "E"

[node name="OudButton4" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 950.0
offset_top = 435.0
offset_right = 980.0
offset_bottom = 465.0
track_stream = ExtResource("8_ldod0")
track_stream_alt = ExtResource("9_cagy1")
keycode = 82
label_note = "F"

[node name="OudButton5" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 650.0
offset_top = 520.0
offset_right = 680.0
offset_bottom = 550.0
track_stream = ExtResource("10_nkod4")
track_stream_alt = ExtResource("11_8qc1u")
keycode = 65
label_note = "G"

[node name="OudButton6" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 750.0
offset_top = 520.0
offset_right = 780.0
offset_bottom = 550.0
track_stream = ExtResource("12_u4l25")
track_stream_alt = ExtResource("13_cj3pb")
keycode = 83
label_note = "A"

[node name="OudButton7" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 850.0
offset_top = 520.0
offset_right = 880.0
offset_bottom = 550.0
track_stream = ExtResource("14_sc8pf")
track_stream_alt = ExtResource("15_edbbm")
keycode = 68
label_note = "B"

[node name="OudButton8" parent="OudButtons" instance=ExtResource("2_r8tf0")]
offset_left = 950.0
offset_top = 520.0
offset_right = 980.0
offset_bottom = 550.0
track_stream = ExtResource("14_27dc4")
track_stream_alt = ExtResource("15_4bt7w")
keycode = 70

[node name="Scroll" type="Sprite2D" parent="."]
position = Vector2(382, -132)
scale = Vector2(0.695616, 0.511494)
texture = ExtResource("18_w3b70")

[node name="Score" type="Label" parent="."]
offset_left = 157.0
offset_top = -159.0
offset_right = 641.0
offset_bottom = -95.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_tussx")
theme_override_font_sizes/font_size = 40
text = "HELLOOOOOO"
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("20_1ff0j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score"]
libraries = {
"": SubResource("AnimationLibrary_re2dq")
}

[node name="Score2" type="Label" parent="."]
offset_left = 157.0
offset_top = -159.0
offset_right = 641.0
offset_bottom = -95.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_tussx")
theme_override_font_sizes/font_size = 40
text = "HELLOOOOOO"
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("20_1ff0j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score2"]
libraries = {
"": SubResource("AnimationLibrary_re2dq")
}

[node name="Score3" type="Label" parent="."]
offset_left = 157.0
offset_top = -159.0
offset_right = 641.0
offset_bottom = -95.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_tussx")
theme_override_font_sizes/font_size = 40
text = "HELLOOOOOO"
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("20_1ff0j")
score = "C G A A# A G F# G"
score_list = Array[String](["C", "G", "A", "A#", "A", "G", "F#", "G"])

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score3"]
libraries = {
"": SubResource("AnimationLibrary_re2dq")
}

[node name="Score4" type="Label" parent="."]
offset_left = 157.0
offset_top = -159.0
offset_right = 641.0
offset_bottom = -95.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("19_tussx")
theme_override_font_sizes/font_size = 40
text = "HELLOOOOOO"
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("20_1ff0j")
score = "C G A A# A G F# G D C D"
score_list = Array[String](["C", "G", "A", "A#", "A", "G", "F#", "G", "D", "C", "D"])

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score4"]
libraries = {
"": SubResource("AnimationLibrary_re2dq")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_65g2k")

[node name="Label" type="Label" parent="."]
offset_left = -187.0
offset_top = 113.0
offset_right = -22.0
offset_bottom = 222.0
rotation = 1.38001
scale = Vector2(0.825524, 0.75816)
theme_override_colors/font_color = Color(0.392157, 0.258824, 0.145098, 0.870588)
theme_override_fonts/font = ExtResource("22_g3278")
theme_override_font_sizes/font_size = 50
text = "Oud Hero"

[node name="Label2" type="Label" parent="."]
offset_left = 277.0
offset_top = 371.0
offset_right = 655.0
offset_bottom = 394.0
theme_override_fonts/font = ExtResource("19_tussx")
theme_override_font_sizes/font_size = 20
text = "Hold Shift to play the #'s"
horizontal_alignment = 1

[connection signal="pressed_note" from="OudButtons/OudButton" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton2" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton3" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton4" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton5" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton6" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton7" to="." method="_on_oud_button_pressed_note"]
[connection signal="pressed_note" from="OudButtons/OudButton8" to="." method="_on_oud_button_pressed_note"]
